[gd_scene load_steps=12 format=2]

[ext_resource path="res://flat_platform_fading.gd" type="Script" id=1]
[ext_resource path="res://Area2D_fading_platform.gd" type="Script" id=2]
[ext_resource path="res://platform_broken.png" type="Texture" id=3]
[ext_resource path="res://rock fx.wav" type="AudioStream" id=4]
[ext_resource path="res://rock fx 2.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.0283, 5.32738 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.9819, 53.3947 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 25, 0, 0 )
spread = 133.97
gravity = Vector3( -250, 500, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 250, 500, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -24, -5.5625, 72, -5.5, 72, 5.4375, -23.875, 5.375 )

[node name="flat_platform_fading" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 0 )
scale = Vector2( 2.4, 1 )
shape = SubResource( 1 )

[node name="Area2D_fading_platform" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_fading_platform"]
position = Vector2( 24, 0 )
scale = Vector2( 2.4, 0.1 )
shape = SubResource( 2 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Area2D_fading_platform"]
visible = false
scale = Vector2( 10, 10 )
mesh = SubResource( 3 )

[node name="rock_fx_1" type="AudioStreamPlayer2D" parent="Area2D_fading_platform"]
position = Vector2( 24, 0 )
stream = ExtResource( 4 )

[node name="platform_broken" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="platform_broken2" type="Sprite" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 3 )

[node name="Particles_2_1" type="Particles2D" parent="."]
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Particles_2_2" type="Particles2D" parent="."]
position = Vector2( 48, 0 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="rock_fx_2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 24, 0 )
stream = ExtResource( 5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 6 )
[connection signal="body_entered" from="Area2D_fading_platform" to="Area2D_fading_platform" method="_on_Area2D_fading_platform_body_entered"]
